--- a/index.html
+++ b/index.html
@@ -4,18 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        
+        #mainScreen {
+            width: 100%;
+            height: 100%;
+            background-color: #efefef;
+            text-align: center;
+        }
+        #lobby {
+            display: none;
+        }
     </style>
-    <title>SnailCat Tower Defence</title>
+    <title>Snail VS Cat Tower Defence</title>
 </head>
 <body>
     <div id="mainScreen">
-        <div></div>
+        <div id="title">
+            <h1>Snail VS Cat Tower Defence!</h1>
+            <p>Who Shall Win?</p>
+        </div>
+        <div id="nameScreen">
+            <input id="nameInput" >
+            <button id="nameBtn">Go!</button>
+            <p id="errMsg" style="color: red;"></p>
+        </div>
+        <div id="lobby">
+            <button id="lookForGame">look for game</button>
+        </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
-
+        document.getElementById("nameBtn").addEventListener("click", () => {
+            const name = encodeURIComponent(document.getElementById("nameInput").value);
+            localStorage.name = name;
+            document.getElementById("lobby").style.display = "block";
+            connected()
+        });
+        if (localStorage.name) {
+            document.getElementById("lobby").style.display = "block";
+            connected()
+        }
+        function connected() {
+            socket.emit("connected", name)
+            socket.emit("refreshNames");
+        }
     </script>
 </body>
 </html>
