--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             connected()
         });
         if (localStorage.name) {
+            const name = localStorage.name;
             document.getElementById("lobby").style.display = "block";
             connected()
         }
