--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         var socket = io();
         var team = "none";
         if (getCookie("name")) {
+            var name = getCookie("name");
             document.getElementById("lobby").style.display = "block";
             document.getElementById("nameScreen").style.display = "none";
             connected()
         }
         document.getElementById("nameBtn").addEventListener("click", () => {
-            const name = encodeURIComponent(document.getElementById("nameInput").value);
+            var name = encodeURIComponent(document.getElementById("nameInput").value);
             setCookie("name", name, 999999);
             document.getElementById("lobby").style.display = "block";
             document.getElementById("nameScreen").style.display = "none";
