--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
         #mainScreen {
             width: 100%;
             height: 100%;
@@ -15,6 +20,15 @@
         }
         #game {
             display: none;
+        }
+        #level1 {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('path-to-your-image.jpg') no-repeat center center;
+            background-size: cover;
         }
     </style>
     <title>Snail VS Cat Tower Defence</title>
@@ -34,7 +48,9 @@
             <button id="lookForGame">look for game</button>
         </div>
     </div>
-    <div id="game"></div>
+    <div id="game">
+        <div id="level1"></div>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
